--- a/src/styles/Results/Notification.css
+++ b/src/styles/Results/Notification.css
@@ -16,6 +16,7 @@
 .noti-row {
   align-items: center;
   margin-top: 10px !important;
+  margin-bottom: 10px !important
 }
 
 #no-results {
